# serve

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cypress  Dockerfile.nginx  Dockerfile.profiling  README.md  conftest.py  cypress.config.js  docker-compose.yaml  local.Dockerfile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  uv.dockerfile
.ci/: serve_mlflow.json  serve_tf.json  test.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: chart.md
.github/workflows/: build-and-test-studio.yaml  build-studio.yaml  ci.yaml  e2e-tests.yaml  pre-commit.yaml  publish.yaml  so-integration-tests.yaml  test-and-publish.yaml
api/: APIpermissions.py  README.md  public_views.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/openapi/: apps_views.py  common.py  common_api.py  content_stats_api.py  lookups_api.py  monitoring.py  public_apps_api.py  urls.py
api/services/: kubectl.py  loki.py
api/tests/: test_api.py  test_openapi.py  test_openapi_content_stats.py  test_openapi_public_apps.py
apps/: README.md  admin.py  app_registry.py  apps.py  constants.py  controller.py  forms.py  generate_form.py  helpers.py  models.py  serialize.py  signals.py  tasks.py  urls.py  views.py
apps/forms/: __init__.py  base.py  custom.py  custom_field.py  dash.py  depictio.py  filemanager.py  gradio.py  jupyter.py  mixins.py  mlflow.py  netpolicy.py  rstudio.py  shiny.py  shinyproxy.py  streamlit.py  tissuumaps.py  volumes.py  vscode.py
apps/migrations/: 0001_initial.py  0002_initial.py  0003_alter_baseappinstance_subdomain.py  0003_alter_baseappinstance_subdomain_and_more.py  0003_alter_customappinstance_access_and_more.py  0003_alter_customappinstance_tags_alter_dashinstance_tags_and_more.py  0003_alter_subdomain_project.py  0003_shinyinstance_allow_container_reuse_and_more.py  0003_subdomain_user_created_and_more.py  0004_alter_customappinstance_access_and_more.py  0004_subdomain_is_created_by_user_and_more.py  0004_subdomain_user_created_and_more.py  0005_shinyinstance_allow_container_reuse_and_more.py  0005_subdomain_is_created_by_user_and_more.py  0006_shinyinstance_path_shinyinstance_volume.py  0006_subdomain_is_created_by_user_and_more.py  0007_shinyinstance_path_shinyinstance_volume.py  0008_alter_shinyinstance_allow_container_reuse_and_more.py  0009_alter_customappinstance_volume_and_more.py  0010_shinyinstance_shiny_app_path.py  0010_shinyinstance_shiny_site_dir.py  0011_jupyterinstance_environment.py  0012_rstudioinstance_environment.py  0013_alter_customappinstance_tags_alter_dashinstance_tags_and_more.py  0014_alter_customappinstance_path.py  0015_tagulous_abstractcustomappinstance_tags_and_more.py  0016_tagulous_streamlitinstance_tags_streamlitinstance.py  0017_alter_streamlitinstance_port.py  0018_customappinstance_custom_default_url_and_more.py  0018_customappinstance_default_url_subpath.py  0019_alter_jupyterinstance_environment_and_more.py  0019_alter_shinyinstance_shiny_site_dir.py  0020_alter_jupyterinstance_environment_and_more.py  0021_dashinstance_default_url_subpath.py  0021_k8suserappstatus.py  0022_apps_gpu_enabled.py  0022_baseappinstance_k8s_user_app_status_and_more.py  0022_baseappinstance_upload_size.py  0022_k8suserappstatus.py  0022_mlflowinstance.py  (+24 more)
apps/models/: __init__.py
apps/templates/: create.html  index_apps.html  logs.html  new.html  update.html
apps/tests/: test_app_helper_utils.py  test_app_instance.py  test_app_instance_manager.py  test_app_settings_view.py  test_app_view_forbidden.py  test_create_app_view.py  test_delete_app_view.py  test_forms.py  test_generate_form.py  test_get_status_view.py  test_kubernetes_deployment_manifest.py  test_subdomain_candidate.py  test_update_status_handler.py  test_url_validation.py  test_validate_docker_image_architecture.py
apps/types_/: app_registry.py  app_types.py  kubernetes_deployment_manifest.py  subdomain.py  url_additional_path_validation.py
apps/validators/: container_images.py
cli/stackn/: auth.py
collections_module/: admin.py  apps.py  models.py  urls.py  views.py
collections_module/migrations/: 0001_initial.py  0002_collection_zenodo_community_id.py
common/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  tasks.py  tests.py  tests_security_test_data_population_views.py  urls.py  views.py
common/management/: manage_test_data.py
common/migrations/: 0001_initial.py  0002_emailsendingtable.py  0002_emailverificationtable.py  0003_alter_emailsendingtable_template.py  0003_fixtureversion.py  0004_emailverificationtable_date_created.py  0004_userprofile_deleted_on.py  0005_maintenancemode.py
common/templatetags/: can_create_app.py
common/tests/: dev-data-manager.sh  tests.py  tests_security_test_data_population_views.py
components/studio/: Dockerfile  Dockerfile.alpine  package-lock.json  requirements.txt
customtags/templatetags/: can_create_app.py  get_dict_key.py  get_version.py  is_disabled.py  is_login_signup_disabled.py
cypress/e2e/: db-reset.sh  db-seed-brute-force-login-user.sh  (+6 more)
docs/: README.md  cli.md  releasenotes.md  tutorial.md
fixtures/: appcats_fixtures.json  apps_fixtures.json  groups_fixtures.json  intervals_fixtures.json  objecttype_fixtures.json  periodic_tasks_fixtures.json  projects_templates.json
models/: README.md  admin.py  helpers.py  models.py  tests.py  views.py
monitor/: README.md  dash_demo.py  urls.py  views.py
news/: MANIFEST.in  README.md  admin.py  apps.py  models.py  setup.py  urls.py  views.py
portal/: admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
projects/: README.md  admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
scripts/: admin_token.py  app_instance_permissions.py  run_beat.sh  run_flower.sh  run_web.sh  run_worker.sh
studio/: celery.py  helpers.py  middleware.py  negotiation.py  settings.py  singleton.py  system_version.py  tests.py  urls.py  utils.py  version.py  views.py
templates/: 403.html  404.html  500.html  base.html
(+414 files in other folders)
