# This file contains project information and helps control the version numbers displayed.
# It also contains settings for linters and code checkers isort, black and mypy.
# Note that these settings are not respected with pre-commit run --all-files
# In that case add configurations to the .pre-commit-config.yaml file.

[tool.poetry]
name = "serve"
version = "1.0.0"
description = "SciLifeLab Serve is a platform offering machine learning model serving, app hosting (Shiny, Streamlit, Dash, etc.), and other tools to life science researchers affiliated with a Swedish research institute."
license = "Apache 2.0"
maintainers = ["Team Whale <serve@scilifelab.se>",]
authors = ["Team Whale <serve@scilifelab.se>",]
homepage = "https://serve.scilifelab.se"
repository = "https://github.com/ScilifelabDataCentre/stackn"
keywords = ["machine learning", "life science", "research", "django", "python"]

[tool.poetry.dependencies]
python = "^3.8.10"

django = "==4.2.7"
django-celery-beat = "==2.5.0"
django-compressor = "==4.4"
django-cors-headers = "==4.3.1"
django-extensions = "==3.2.3"
django-filter = "==23.3"
django-tagulous = "==1.3.3"
django-guardian = "==2.4.0"
djangorestframework = "==3.14.0"
django-crispy-forms = "==2.0"

# django-wiki
wiki = "==0.10"


# Other Python and project-related libraries
flower = "==2.0.1"
requests = "==2.31.0"
amqp = "==5.1.1"
psycopg2-binary = "==2.9.7"
redis = "==5.0.1"
watchdog = "==3.0.0"
drf-nested-routers = "==0.93.4"
s3fs = "==2023.9.2"
minio = "==7.1.17"
celery = "==5.3.4"
uvicorn = "==0.20.0"
flask-cors = "==4.0.0"
tomli = "==2.0.1"
Pillow = "10.2.0"

flatten-json = "==0.1.13"
PyYAML = "==6.0.1"
Markdown = ">=3.3,<3.4"

# Logging
django-structlog = "^7.1.0"
colorlog = "^6.8.2"


black = { version = "==23.3.0", optional = true }
isort = { version = "==5.12.0", optional = true }
flake8 = { version = "==6.0.0", optional = true }
mypy = { version = "==1.4.1", optional = true }
pytest-django = { version = "==4.5.2", optional = true }
pytest-cov = { version = "==4.1.0", optional = true }
hypothesis = { version = "==6.86.1", optional = true }
moto = { version = "==4.*", extras = ["ec2", "s3", "all"], optional = true }
pytest = { version = "~7.4.2", optional = true }

[tool.poetry.extras]
linters = ["black", "isort", "flake8", "mypy"]
tests = ["pytest-django", "pytest-cov", "hypothesis", "pytest", "moto"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.serve]
build-date = ""
gitref = ""
imagetag = ""

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | migrations
)/
'''

[tool.mypy]
strict = false
python_version = "3.8"
ignore_missing_imports = true
warn_return_any = true
exclude = ["venv", ".venv", "examples"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
	"django.*",
	"rest_framework.*",
	"flatten_json.*",
	"guardian.*",
	"django_filters.*",
	"rest_framework_nested.*",
	"tagulous.*",
	"minio.*",
	"celery.*",
	"dash.*",
	"dash_core_components.*",
	"dash_html_components.*",
	"django_plotly_dash.*",
	"dash_bootstrap_components.*",
	"markdown.*",
	"pytz.*",
	"requests.*",
	"s3fs.*",
	"setuptools.*",
	"yaml.*",
	]
ignore_missing_imports = true
