[project]
name = "serve"
version = "1.0.0"
description = "SciLifeLab Serve is a platform offering machine learning model serving, app hosting (Shiny, Streamlit, Dash, etc.), and other tools to life science researchers affiliated with a Swedish research institute."
authors = [{ name = "Team Whale", email = "serve@scilifelab.se" }]
requires-python = ">=3.10.0,<4"
maintainers = [{ name = "Team Whale", email = "serve@scilifelab.se" }]
keywords = [
    "machine learning",
    "life science",
    "research",
    "django",
    "python",
]
dependencies = [
    "django==5.1.4",
    "django-celery-beat==2.7.0",
    "django-compressor==4.5.1",
    "django-cors-headers==4.4.0",
    "django-extensions==3.2.3",
    "django-filter==24.3",
    "django-tagulous==1.3.3",
    "django-guardian==2.4.0",
    "djangorestframework== 3.15.2",
    "django-crispy-forms==2.3",
    "crispy-bootstrap5==2024.2",
    "django-waffle==4.2.0",
    "wiki==0.11.2",
    "flower>=2.0.1,<3",
    "requests==2.31.0",
    "amqp==5.1.1",
    "psycopg[binary, pool, c]>=3.2.1,<4",
    "redis==5.0.1",
    "watchdog==3.0.0",
    "drf-nested-routers==0.93.4",
    "s3fs==2023.9.2",
    "minio==7.1.17",
    "celery==5.3.4",
    "uvicorn>=0.32.0,<0.33",
    "flask-cors==4.0.2",
    "Pillow==10.3.0",
    "schema>=0.7.7,<0.8",
    "flatten-json==0.1.13",
    "PyYAML==6.0.1",
    "Markdown>=3.4,<3.6",
    "kubernetes-validate==1.31.0",
    "django-structlog>=7.1.0,<8",
    "colorlog>=6.8.2,<7",
    "django-axes[ipware]>=6.3.0,<7",
    "django-password-validators>=1.7.3,<2",
    "django-htmx>=1.18.0,<2",
    "regex>=2024.11.6,<2025",
    "django-gmailapi-json-backend~=1.10",
]

[project.optional-dependencies]
linters = [
    "black==23.3.0",
    "isort==5.12.0",
    "flake8==6.0.0",
    "mypy==1.10.0",
]
tests = [
    "pytest-django==4.8.0",
    "pytest-cov==4.1.0",
    "pytest-xdist>=3.5.0,<4",
    "hypothesis==6.86.1",
    "pytest~=8.0.1",
    "moto[ec2, s3, all]==4.*",
]

[project.urls]
Homepage = "https://serve.scilifelab.se"
Repository = "https://github.com/ScilifelabDataCentre/serve"

[dependency-groups]
security = [
    "h11>=0.16.0",
    "protobuf>=6.31.1",
    "python-jose>=3.4.0",
    "setuptools>=78.1.1",
    "tornado>=6.5",
]

[tool.uv]
default-groups = ["security"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.serve]
build-date = ""
gitref = ""
imagetag = ""

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | venv
  | migrations
)/
'''

[tool.mypy]
strict = true
python_version = "3.12"
disallow_subclassing_any = false
ignore_missing_imports = false
warn_return_any = true
untyped_calls_exclude = ["projects.models"]  # ["apps.helpers","projects.models"]
exclude = ["venv", ".venv", "examples"]

[[tool.mypy.overrides]]
module = "studio.*"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
follow_imports_for_stubs = false

[[tool.mypy.overrides]]
module = "*.models"
strict = false
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
	"*.tests.*",
	"*.tests",
	"conftest",
	#"cypress.*"
]
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
	"apps.*",
	"cypress.*",
	"cypress/e2e/setup-scripts/seed_collections_user"
]
strict = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
	"api.*",
	"apps.*",
	"common.*",
	"customtags.*",
	"models.*",
	"monitor.*",
	"portal.*",
	"projects.*",
	"scripts.*",
]
strict = false
check_untyped_defs = false
disallow_incomplete_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
	"boto3.*",
	"colorlog.*",
	"crispy_forms.*",
	"django.*",
	"django_structlog.*",
	"rest_framework.*",
	"flatten_json.*",
	"guardian.*",
	"hypothesis.*",
	"django_filters.*",
	"rest_framework_nested.*",
	"tagulous.*",
	"minio.*",
	"moto.*",
	"celery.*",
	"dash.*",
	"dash_core_components.*",
	"dash_html_components.*",
	"django_plotly_dash.*",
	"dash_bootstrap_components.*",
	"markdown.*",
	"pytest.*",
	"pytz.*",
	"requests.*",
	"s3fs.*",
	"setuptools.*",
	"structlog.*",
	"yaml.*",
	]
ignore_missing_imports = true

[tool.coverage.run]
    omit = [
        '*/migrations/*',
        '*/__init__.py',
        'tests/*',
        '*/tests/*',
    ]

[tool.coverage.report]
    skip_empty = true
